--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="fr">
 
 <head>
   <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -10,9 +11,11 @@
 </head>
 
 <body>
-  <header>
-    <img src="assets/images/logo.png" class="logo" />
-    <h1>Nos photographes</h1>
+  <header role="banner">
+    <a href="index.html" tabindex=0 aria-label="Fisheye Home page">
+      <img src="assets/images/logo.png" class="logo" alt="logo de Fisheye" role='img' />
+    </a>
+    <h1 aria-label="Titre de la page: Nos photographes">Nos photographes</h1>
   </header>
   <main id="main">
     <div class="photographer_section"></div>
