Etape 4 en cours, ajout récup id param url

--- a/photographer.html
+++ b/photographer.html
@@ -11,10 +11,10 @@
 
 <body>
   <header>
-    <img src="assets/images/logo.png" class="logo" />
   </header>
   <main id="main">
     <div class="photograph-header">
+      <div class="one_photographer_section"></div>
       <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
     </div>
   </main>
@@ -34,6 +34,15 @@
     </div>
   </div>
   <script src="/scripts/utils/contactForm.js"></script>
+  <!-- Factories-->
+  <script src="scripts/factories/Photographer.js"></script>
+
+  <!-- Pages-->
+  <script src="scripts/pages/index.js"></script>
+  <script src="scripts/pages/photographer.js"></script>
+
+  <!-- Models-->
+  <script src="scripts/models/photographer.js"></script>
 </body>
 
 </html>
