--- a/index.html
+++ b/index.html
@@ -13,23 +13,21 @@
 <body>
   <header role="banner">
     <a href="index.html" tabindex=0 aria-label="Fisheye Home page">
-      <img src="assets/images/logo.png" class="logo" alt="logo de Fisheye" role='img' />
+      <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" role='img' />
     </a>
     <h1 aria-label="Titre de la page: Nos photographes">Nos photographes</h1>
   </header>
   <main id="main">
-    <div class="photographer_section"></div>
+    <section class="photographer_section"></section>
   </main>
   <!-- Factories-->
   <script src="scripts/factories/Photographer.js"></script>
 
   <!-- Pages-->
   <script src="scripts/pages/index.js"></script>
-  <script src="scripts/pages/photographer.js"></script>
 
   <!-- Models-->
-  <script src="scripts/models/photographer.js"></script>
-
+  <script src="scripts/models/photographers.js"></script>
 
 </body>
 
