Etape 5 en cours

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="index.html" tabindex=0 aria-label="Fisheye Home page">
       <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" role='img' />
     </a>
-    <h1 aria-label="Titre de la page: Nos photographes">Nos photographes</h1>
+    <h1 aria-label="Titre de la page: Nos photographes" class="title_photographers">Nos photographes</h1>
   </header>
   <main id="main">
     <section class="photographer_section"></section>
