--- a/photographer.html
+++ b/photographer.html
@@ -9,34 +9,54 @@
   <title>Fisheye - photographe </title>
 </head>
 
-<body>
-  <header role="banner">
-    <a href="index.html" tabindex=0 aria-label="Fisheye Home page">
-      <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" role='img' />
-    </a>
-  </header>
-  <main id="main">
-    <section class="photograph-header"></section>
-    <section class="medias"></section>
-  </main>
-  <div id="contact_modal">
-    <div class="modal">
-      <header>
-        <h2>Contactez-moi</h2>
-        <img src="assets/icons/close.svg" onclick="closeModal()" />
-      </header>
-      <form>
-        <div>
-          <label>Prénom</label>
-          <input />
-        </div>
-        <button class="contact_button">Envoyer</button>
-      </form>
-    </div>
+<body id="body">
+  <div id="main-wrapper" aria-hidden="'false">
+    <header role=" banner">
+      <a href="index.html" tabindex=0 aria-label="Fisheye Home page">
+        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" role='img' />
+      </a>
+    </header>
+    <main>
+      <section class="photograph-header"></section>
+      <section class="medias"></section>
+    </main>
+    <footer role="footer">
+      <section class="footer"></section>
+    </footer>
   </div>
+  <div id="contact_modal" class="modal" aria-hidden="true" role="dialog" aria-describedby="modalTitle">
+    <header class="header_modal">
+      <h2 id="modalTitle" class="modal-title"></h2>
+      <button id="modal-close-btn" onclick="closeModal()"><img src="assets/icons/close.svg" /></button>
+    </header>
+    <form>
+      <div role="group" aria-labelledby="coordonnees">
+        <label for="firstName">Prénom</label>
+        <input type="text" class="text-input" name="firstName" id="firstName" aria-describedby="firstName-text-format"
+          aria-required=true />
+        <span id="firstName-text-format" class="hidden">Marie</span>
+        <label for="lastName">Nom</label>
+        <input type="text" class="text-input" name="lastName" id="lastName" aria-describedby="lastName-text-format"
+          aria-required=true />
+        <span id="lastName-text-format" class="hidden">Dupont</span>
+        <label for="email">Email</label>
+        <input type="email" class="text-input" name="email" id="email" aria-describedby="email-format"
+          aria-required=true />
+        <span id="email" class="hidden">mariedupont@gmail.fr</span>
+        <label for="message">Message</label>
+        <textarea type="text" class="text-input" name="message" id="message" aria-describedby="message-format"
+          aria-required=true></textarea>
+        <span id="message" class="hidden">Bonjour...</span>
+      </div>
+      <button id="form_submit" type="submit">Envoyer</button>
+    </form>
+  </div>
+
   <script src="/scripts/utils/contactForm.js"></script>
+  <!-- <script src="/scripts/utils/lightbox.js"></script> -->
   <!-- Factories-->
   <script src="scripts/factories/Photographer.js"></script>
+  <script src="scripts/factories/medias.js"></script>
 
   <!-- Pages-->
   <script src="scripts/pages/photographer.js"></script>
@@ -44,7 +64,8 @@
 
   <!-- Models-->
   <script src="scripts/models/photographer.js"></script>
-  <script src="scripts/models/medias.js"></script>
+  <script src="scripts/models/pictures.js"></script>
+  <script src="scripts/models/videos.js"></script>
 </body>
 
 </html>
