--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script src="scripts/factories/Photographer.js"></script>
 
   <!-- Pages-->
-  <script src="scripts/pages/index.js"></script>
+  <script type="module" src="scripts/pages/index.js"></script>
 
   <!-- Models-->
   <script src="scripts/models/photographers.js"></script>
