--- a/photographer.html
+++ b/photographer.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://kit.fontawesome.com/95f5580879.js" crossorigin="anonymous"></script>
   <title>Fisheye - photographe </title>
 </head>
 
@@ -24,7 +26,7 @@
       <section class="footer"></section>
     </footer>
   </div>
-  <div id="contact_modal" class="modal" aria-hidden="true" role="dialog" aria-describedby="modalTitle">
+  <div id="contact_modal" class="modal hidden" aria-hidden="true" role="dialog" aria-describedby="modalTitle">
     <header class="header_modal">
       <h2 id="modalTitle" class="modal-title"></h2>
       <button id="modal-close-btn" onclick="closeModal()"><img src="assets/icons/close.svg" /></button>
@@ -51,21 +53,25 @@
       <button id="form_submit" type="submit">Envoyer</button>
     </form>
   </div>
-
+  <ul class="carousel hidden" id="lightbox_modal" aria-hidden="true" role="slider" aria-label="image closeup view">
+    <button id='lightbox-close-btn' onclick="closeLightbox()"><img src="assets/icons/close.svg" /></button>
+  </ul>
   <script src="/scripts/utils/contactForm.js"></script>
-  <!-- <script src="/scripts/utils/lightbox.js"></script> -->
-  <!-- Factories-->
-  <script src="scripts/factories/Photographer.js"></script>
-  <script src="scripts/factories/medias.js"></script>
-
-  <!-- Pages-->
-  <script src="scripts/pages/photographer.js"></script>
-  <script src="scripts/pages/medias.js"></script>
-
+  <script src="/scripts/utils/lightbox.js"></script>
   <!-- Models-->
   <script src="scripts/models/photographer.js"></script>
   <script src="scripts/models/pictures.js"></script>
   <script src="scripts/models/videos.js"></script>
+  <script src="scripts/models/carrousel.js"></script>
+  <!-- Factories-->
+  <script src="scripts/factories/Photographer.js"></script>
+  <script src="scripts/factories/medias.js"></script>
+  <script src="scripts/factories/carrousel.js"></script>
+
+  <!-- Pages-->
+  <script type="module" src="scripts/pages/photographer.js"></script>
+  <script type="module" src="scripts/pages/medias.js"></script>
+
 </body>
 
 </html>
