Lightbox en cours

--- a/photographer.html
+++ b/photographer.html
@@ -53,11 +53,10 @@
       <button id="form_submit" type="submit">Envoyer</button>
     </form>
   </div>
-  <ul class="carousel hidden" id="lightbox_modal" aria-hidden="true" role="slider" aria-label="image closeup view">
+  <ul class="carousel hidden" id="lightbox_modal" role="slider" aria-label="image closeup view">
     <button id='lightbox-close-btn' onclick="closeLightbox()"><img src="assets/icons/close.svg" /></button>
   </ul>
-  <script src="/scripts/utils/contactForm.js"></script>
-  <script src="/scripts/utils/lightbox.js"></script>
+  </div>
   <!-- Models-->
   <script src="scripts/models/photographer.js"></script>
   <script src="scripts/models/pictures.js"></script>
@@ -71,6 +70,9 @@
   <!-- Pages-->
   <script type="module" src="scripts/pages/photographer.js"></script>
   <script type="module" src="scripts/pages/medias.js"></script>
+
+  <script src="/scripts/utils/contactForm.js"></script>
+  <script src="/scripts/utils/lightbox.js"></script>
 
 </body>
 
