Etape 8: ajout affichage likes ok

--- a/photographer.html
+++ b/photographer.html
@@ -54,7 +54,12 @@
     </form>
   </div>
   <ul class="carousel hidden" id="lightbox_modal" role="slider" aria-label="image closeup view">
-    <button id='lightbox-close-btn' onclick="closeLightbox()"><img src="assets/icons/close.svg" /></button>
+    <button id='lightbox-close-btn' onclick="closeLightbox()"><svg width="42" height="42" viewBox="0 0 42 42"
+        fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M42 4.23L37.77 0L21 16.77L4.23 0L0 4.23L16.77 21L0 37.77L4.23 42L21 25.23L37.77 42L42 37.77L25.23 21L42 4.23Z"
+          fill="#901C1C" />
+      </svg> </button>
   </ul>
   </div>
   <!-- Models-->
@@ -63,6 +68,7 @@
   <script src="scripts/models/videos.js"></script>
   <script src="scripts/models/carouselPicture.js"></script>
   <script src="scripts/models/carouselVideo.js"></script>
+  <script src="scripts/models/likes.js"></script>
   <!-- Factories-->
   <script src="scripts/factories/Photographer.js"></script>
   <script src="scripts/factories/medias.js"></script>
