--- a/photographer.html
+++ b/photographer.html
@@ -77,9 +77,10 @@
   <!-- Pages-->
   <script type="module" src="scripts/pages/photographer.js"></script>
   <script type="module" src="scripts/pages/medias.js"></script>
-
+  <!----> Utils -->
   <script src="/scripts/utils/contactForm.js"></script>
   <script src="/scripts/utils/lightbox.js"></script>
+  <script src="/scripts/utils/likes.js"></script>
 
 </body>
 
