--- a/photographer.html
+++ b/photographer.html
@@ -20,6 +20,7 @@
     </header>
     <main>
       <section class="photograph-header"></section>
+      <section class="medias_sorting"> Trier par : </section>
       <section class="medias"></section>
     </main>
     <footer role="footer">
@@ -29,7 +30,8 @@
   <div id="contact_modal" class="modal hidden" aria-hidden="true" role="dialog" aria-describedby="modalTitle">
     <header class="header_modal">
       <h2 id="modalTitle" class="modal-title"></h2>
-      <button id="modal-close-btn" onclick="closeModal()"><img src="assets/icons/close.svg" /></button>
+      <button id="modal-close-btn" aria-hidden="true" onclick="closeModal()"><img
+          src="assets/icons/close.svg" /></button>
     </header>
     <form>
       <div role="group" aria-labelledby="coordonnees">
@@ -50,12 +52,12 @@
           aria-required=true></textarea>
         <span id="message" class="hidden">Bonjour...</span>
       </div>
-      <button id="form_submit" type="submit">Envoyer</button>
+      <button id="form_submit" aria-hidden="true" type="submit">Envoyer</button>
     </form>
   </div>
-  <ul class="carousel hidden" id="lightbox_modal" role="slider" aria-label="image closeup view">
-    <button id='lightbox-close-btn' onclick="closeLightbox()"><svg width="42" height="42" viewBox="0 0 42 42"
-        fill="none" xmlns="http://www.w3.org/2000/svg">
+  <ul class="carousel hidden" aria-hidden="true" id="lightbox_modal" role="slider" aria-label="image closeup view">
+    <button id='lightbox-close-btn' aria-hidden="true" onclick="closeLightbox()"><svg width="42" height="42"
+        viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
           d="M42 4.23L37.77 0L21 16.77L4.23 0L0 4.23L16.77 21L0 37.77L4.23 42L21 25.23L37.77 42L42 37.77L25.23 21L42 4.23Z"
           fill="#901C1C" />
