--- a/photographer.html
+++ b/photographer.html
@@ -74,6 +74,12 @@
       </svg> </button>
   </ul>
   </div>
+  <!-- Utils -->
+  <script src="/scripts/utils/contactForm.js"></script>
+  <script src="/scripts/utils/lightbox.js"></script>
+  <script src="/scripts/utils/likes.js"></script>
+  <script src="/scripts/utils/carousel_animation.js"></script>
+  <script src="/scripts/utils/sorting.js"></script>
   <!-- Models-->
   <script src="scripts/models/photographer.js"></script>
   <script src="scripts/models/pictures.js"></script>
@@ -89,10 +95,7 @@
   <!-- Pages-->
   <script type="module" src="scripts/pages/photographer.js"></script>
   <script type="module" src="scripts/pages/medias.js"></script>
-  <!-- Utils -->
-  <script src="/scripts/utils/contactForm.js"></script>
-  <script src="/scripts/utils/lightbox.js"></script>
-  <script src="/scripts/utils/likes.js"></script>
+
 
 </body>
 
