--- a/photographer.html
+++ b/photographer.html
@@ -34,7 +34,11 @@
       <section class="medias"></section>
     </main>
     <footer role="footer">
-      <section class="footer"></section>
+      <section class="footer">
+        <div class="total_likes_content">
+          <div class='total_likes'> </div><span><i class="fa-solid fa-heart"></i></span>
+          <div></div>
+      </section>
     </footer>
   </div>
   <div id="contact_modal" class="modal hidden" aria-hidden="true" role="dialog" aria-describedby="modalTitle">
