--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <header role="banner">
+  <header>
     <a href="index.html" tabindex=0 aria-label="Fisheye Home page">
-      <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" role='img' />
+      <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" />
     </a>
     <h1 aria-label="Titre de la page: Nos photographes" class="title_photographers">Nos photographes</h1>
   </header>
