--- a/photographer.html
+++ b/photographer.html
@@ -2,104 +2,115 @@
 <html lang="fr">
 
 <head>
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
-  <meta charset="utf-8">
-  <link rel="icon" type="image/png" href="assets/favicon.png">
-  <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://kit.fontawesome.com/95f5580879.js" crossorigin="anonymous"></script>
-  <title>Fisheye - photographe </title>
+	<link href="css/style.css" rel="stylesheet" type="text/css" />
+	<meta charset="utf-8">
+	<link rel="icon" type="image/png" href="assets/favicon.png">
+	<link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="https://kit.fontawesome.com/95f5580879.js" crossorigin="anonymous"></script>
+	<title>Fisheye - photographe </title>
 </head>
 
 <body id="body">
-  <div id="main-wrapper" aria-hidden="'false">
-    <header role=" banner">
-      <a href="index.html" tabindex=0 aria-label="Fisheye Home page">
-        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" role='img' />
-      </a>
-    </header>
-    <main>
-      <section class="photograph-header"></section>
-      <section class="medias_sorting">
-        <div>Trier par: </div>
-        <form action="">
-          <select>
-            <option value=""></option>
-            <option value="Popularite">Popularité</option>
-            <option value="Date">Date</option>
-            <option value="Titre">Titre</option>
-          </select>
-        </form>
-      </section>
-      <section class="medias"></section>
-    </main>
-    <footer role="footer">
-      <section class="footer">
-        <div class="total_likes_content">
-          <div class='total_likes'> </div><span><i class="fa-solid fa-heart"></i></span>
-          <div></div>
-      </section>
-    </footer>
-  </div>
-  <div id="contact_modal" class="modal hidden" aria-hidden="true" role="dialog" aria-describedby="modalTitle">
-    <header class="header_modal">
-      <h2 id="modalTitle" class="modal-title"></h2>
-      <button id="modal-close-btn" aria-hidden="true" onclick="closeModal()"><img
-          src="assets/icons/close.svg" /></button>
-    </header>
-    <form>
-      <div role="group" aria-labelledby="coordonnees">
-        <label for="firstName">Prénom</label>
-        <input type="text" class="text-input" name="firstName" id="firstName" aria-describedby="firstName-text-format"
-          aria-required=true />
-        <span id="firstName-text-format" class="hidden">Marie</span>
-        <label for="lastName">Nom</label>
-        <input type="text" class="text-input" name="lastName" id="lastName" aria-describedby="lastName-text-format"
-          aria-required=true />
-        <span id="lastName-text-format" class="hidden">Dupont</span>
-        <label for="email">Email</label>
-        <input type="email" class="text-input" name="email" id="email" aria-describedby="email-format"
-          aria-required=true />
-        <span id="email" class="hidden">mariedupont@gmail.fr</span>
-        <label for="message">Message</label>
-        <textarea type="text" class="text-input" name="message" id="message" aria-describedby="message-format"
-          aria-required=true></textarea>
-        <span id="message" class="hidden">Bonjour...</span>
-      </div>
-      <button id="form_submit" aria-hidden="true" type="submit">Envoyer</button>
-    </form>
-  </div>
-  <ul class="carousel hidden" aria-hidden="true" id="lightbox_modal" role="slider" aria-label="image closeup view">
-    <button id='lightbox-close-btn' aria-hidden="true" onclick="closeLightbox()"><svg width="42" height="42"
-        viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M42 4.23L37.77 0L21 16.77L4.23 0L0 4.23L16.77 21L0 37.77L4.23 42L21 25.23L37.77 42L42 37.77L25.23 21L42 4.23Z"
-          fill="#901C1C" />
-      </svg> </button>
-  </ul>
-  </div>
-  <!-- Utils -->
-  <script src="/scripts/utils/contactForm.js"></script>
-  <script src="/scripts/utils/lightbox.js"></script>
-  <script src="/scripts/utils/carousel_animation.js"></script>
-  <script src="/scripts/utils/sorting.js"></script>
-  <!-- Models-->
-  <script src="scripts/models/photographer.js"></script>
-  <script src="scripts/models/pictures.js"></script>
-  <script src="scripts/models/videos.js"></script>
-  <script src="scripts/models/carouselPicture.js"></script>
-  <script src="scripts/models/carouselVideo.js"></script>
+	<div id="main-wrapper">
+		<header>
+			<a href="index.html" tabindex=0 aria-label="Fisheye Home page">
+				<img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" />
+			</a>
+		</header>
+		<main>
+			<section class="photograph-header"></section>
+			<section class="medias_sorting">
+				<div>Triez par
+					<div class="header-dropdown-link-content">
+						<a href="#" class="select_sorting" aria-label="trier par popularité">Popularité</a>
+						<a class="header-dropdown-link"
+							aria-label="ouvrir ou fermer le menu déoulant des tris de photographies et videos"
+							aria-haspopup="true" aria-expanded="false" href="#">
+							<svg width="16" height="10" viewBox="0 0 16 10" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<path d="M1 1.33447L8.00465 8.13311L14.5973 1.33447" stroke="#E9E9E9"
+									stroke-width="2" />
+							</svg>
+						</a>
+					</div>
+				</div>
+				<ul class="dropdown hidden">
+					<li class="line">
+						<a href="#" class="select_sorting" aria-label="trier par date">Date</a>
+					</li>
+					<li>
+						<a href="#" class="select_sorting" aria-label="trier par Titre">Titre</a>
+					</li>
+				</ul>
+			</section>
+			<section class="medias"></section>
+		</main>
+		<footer>
+			<section class="footer">
+				<div class="total_likes_content">
+					<div class='total_likes'> </div><span><i class="fa-solid fa-heart"></i></span>
+				</div>
+			</section>
+		</footer>
+	</div>
+	<div id="contact_modal" class="modal hidden" aria-hidden="true" role="dialog" aria-describedby="modalTitle">
+		<header class="header_modal">
+			<h2 id="modalTitle" class="modal-title"></h2>
+			<button id="modal-close-btn" aria-hidden="true" onclick="closeModal()"><img src="assets/icons/close.svg"
+					alt="Fermeture modale" /></button>
+		</header>
+		<form>
+			<div role="group">
+				<label for="firstName">Prénom</label>
+				<input type="text" class="text-input" name="firstName" id="firstName" aria-required="required"
+					minlength='2' required="required" />
+				<label for="lastName">Nom</label>
+				<input type="text" class="text-input" name="lastName" id="lastName" aria-required="required"
+					minlength='2' required="required" />
+				<label for="email">Email</label>
+				<input type="email" class="text-input" name="email" id="email" aria-required="required" minlength='2'
+					required="required" />
+				<label for="message">Message</label>
+				<textarea class="text-input" name="message" id="message" aria-required="required" minlength='2'
+					required="required"></textarea>
+			</div>
+			<!-- <button id="form_submit" aria-hidden="true" type="submit">Envoyer</button> -->
+			<input id="form_submit" type="submit" value="Envoyer" />
+		</form>
+	</div>
+	<div class="carousel hidden" aria-hidden="true" id="lightbox_modal" aria-label="image closeup view">
+		<button id='lightbox-close-btn' aria-hidden="true"><svg width="42" height="42" viewBox="0 0 42 42" fill="none"
+				xmlns="http://www.w3.org/2000/svg">
+				<path
+					d="M42 4.23L37.77 0L21 16.77L4.23 0L0 4.23L16.77 21L0 37.77L4.23 42L21 25.23L37.77 42L42 37.77L25.23 21L42 4.23Z"
+					fill="#901C1C" />
+			</svg> </button>
+		<ul>
+		</ul>
+	</div>
+	<!-- Utils -->
+	<script src="/scripts/utils/contactForm.js"></script>
+	<script src="/scripts/utils/lightbox.js"></script>
+	<script src="/scripts/utils/carousel_animation.js"></script>
+	<script src="/scripts/utils/sorting.js"></script>
+	<!-- Models-->
+	<script src="scripts/models/photographer.js"></script>
+	<script src="scripts/models/pictures.js"></script>
+	<script src="scripts/models/videos.js"></script>
+	<script src="scripts/models/carouselPicture.js"></script>
+	<script src="scripts/models/carouselVideo.js"></script>
 
-  <!-- Factories-->
-  <script src="scripts/factories/Photographer.js"></script>
-  <script src="scripts/factories/medias.js"></script>
-  <script src="scripts/factories/carousel.js"></script>
+	<!-- Factories-->
+	<script src="scripts/factories/Photographer.js"></script>
+	<script src="scripts/factories/medias.js"></script>
+	<script src="scripts/factories/carousel.js"></script>
 
-  <!-- Pages-->
-  <script type="module" src="scripts/pages/photographer.js"></script>
-  <script type="module" src="scripts/pages/medias.js"></script>
-
+	<!-- Pages-->
+	<script type="module" src="scripts/pages/photographer.js"></script>
+	<script type="module" src="scripts/pages/medias.js"></script>
 
 </body>
+
 
 </html>
