--- a/photographer.html
+++ b/photographer.html
@@ -21,7 +21,7 @@
 		<main>
 			<section class="photograph-header"></section>
 			<section class="medias_sorting">
-				<div>Triez par
+				<div><span class="dropdown-link-title">Triez par</span>
 					<div class="header-dropdown-link-content">
 						<a href="#" class="select_sorting" aria-label="trier par popularité">Popularité</a>
 						<a class="header-dropdown-link"
@@ -54,6 +54,7 @@
 			</section>
 		</footer>
 	</div>
+
 	<div id="contact_modal" class="modal hidden" aria-hidden="true" role="dialog" aria-describedby="modalTitle">
 		<header class="header_modal">
 			<h2 id="modalTitle" class="modal-title"></h2>
@@ -80,16 +81,17 @@
 				<label for="message">Message
 					<textarea class="text-input" name="message" id="message" aria-required="required" minlength='20'
 						required="required" aria-describedby="format_message" aria-invalid="false"></textarea>
-					<p id="format_message	" class="hiddenInput">Votre message doit contenir plus de 20 caractères</p>
+					<p id="format_message	" class="hiddenInput">Votre message doit contenir plus de 20 caractères
+					</p>
 				</label>
 			</div>
-
 			<input id="form_submit" type="submit" value="Envoyer" />
 		</form>
 	</div>
+
 	<div class="carousel hidden" aria-hidden="true" id="lightbox_modal" aria-label="image closeup view">
-		<button id='lightbox-close-btn' aria-hidden="true"><svg width="42" height="42" viewBox="0 0 42 42" fill="none"
-				xmlns="http://www.w3.org/2000/svg">
+		<button id='lightbox-close-btn' aria-hidden="true" onclick="closeLightbox()"><svg width="42" height="42"
+				viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path
 					d="M42 4.23L37.77 0L21 16.77L4.23 0L0 4.23L16.77 21L0 37.77L4.23 42L21 25.23L37.77 42L42 37.77L25.23 21L42 4.23Z"
 					fill="#901C1C" />
