--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <h1 aria-label="Titre de la page: Nos photographes" class="title_photographers">Nos photographes</h1>
   </header>
   <main id="main">
-    <section class="photographer_section"></section>
+    <div class="photographer_section"></div>
   </main>
   <!-- Factories-->
-  <script src="scripts/factories/Photographer.js"></script>
+  <script src="scripts/factories/photographer.js"></script>
 
   <!-- Pages-->
   <script type="module" src="scripts/pages/index.js"></script>
