--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <a href="index.html" tabindex=0 aria-label="Fisheye Home page">
       <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" />
     </a>
-    <h1 aria-label="Titre de la page: Nos photographes" class="title_photographers">Nos photographes</h1>
+    <h1 aria-label="Nos photographes" class="title-photographers">Nos photographes</h1>
   </header>
   <main id="main">
-    <div class="photographer_section"></div>
+    <div class="photographer-section"></div>
   </main>
   <!-- Factories-->
   <script src="scripts/factories/photographer.js"></script>
