--- a/photographer.html
+++ b/photographer.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/95f5580879.js" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
 	<title>Fisheye - photographe </title>
 </head>
 
