--- a/photographer.html
+++ b/photographer.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/95f5580879.js" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
+
 	<title>Fisheye - photographe </title>
 </head>
 
@@ -25,23 +25,30 @@
 			<div class="photograph-header"></div>
 			<div class="medias-sorting">
 				<span class="dropdown-link-title">Triez par</span>
-				<ul id="exp-elem" class="header-dropdown-link-content" aria-labelledby="exp-elem exp-button"
-					role="listbox">
+				<div class="dropdown-content">
+					<div class="list-content">
+						<ul id="exp-elem" class="header-dropdown-link-content" aria-labelledby="exp-elem exp-button"
+							role="listbox">
+							<li tabindex="0" role='option' class="select-sorting select-sorting-title"
+								aria-selected="true">
+								Popularité
+							</li>
+							<li tabindex="0" role='option' class="line dropdown hidden select-sorting"
+								aria-selected="false">
+								Date
+							</li>
+							<li tabindex="0" role='option' class="dropdown hidden select-sorting" aria-selected="false">
+								Titre
+							</li>
+						</ul>
+					</div>
 					<button tabindex="0" class="header-dropdown-link" aria-haspopup="listbox"
 						aria-label="trie des médias" aria-expanded="true" id="exp-button">
 						<svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M1 1.33447L8.00465 8.13311L14.5973 1.33447" stroke="#E9E9E9" stroke-width="2" />
 						</svg>
 					</button>
-					<li tabindex="0" class="select-sorting select-sorting-title" aria-selected="true">Popularité
-					</li>
-					<li tabindex="0" role='option' class="line dropdown hidden select-sorting" aria-selected="false">
-						Date
-					</li>
-					<li tabindex="0" role='option' class="dropdown hidden select-sorting" aria-selected="false">
-						Titre
-					</li>
-				</ul>
+				</div>
 			</div>
 			<div class="medias" aria-hidden="false"></div>
 		</main>
@@ -75,7 +82,8 @@
 				</label>
 				<label for="email" id="emailInput">Email
 					<input aria-labelledby="emailInput" type="email" class="text-input" name="email" id="email"
-						minlength='2' required="required" aria-describedby="format-email" aria-invalid="false" />
+						minlength='2' required="required" required pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+						aria-describedby="format-email" aria-invalid="false" />
 					<span id="format-email" class="hiddenInput">Votre email doit avoir un format d'email
 						valide</span>
 				</label>
@@ -90,7 +98,7 @@
 			<input id="form-submit" type="submit" value="Envoyer" />
 		</form>
 	</div>
-	<ul class="carousel hidden" aria-hidden="true" id="lightbox-modal" aria-label="image closeup view" role="dialog"
+	<div class="carousel hidden" aria-hidden="true" id="lightbox-modal" aria-label="image closeup view" role="dialog"
 		aria-describedby="lightboxTitle">
 		<span id="lightboxTitle" class="hiddenInput"> Lightbox ouverte appuyer sur les flèches pour faire défiler les
 			photos et vidéos</span>
@@ -100,12 +108,11 @@
 					d="M42 4.23L37.77 0L21 16.77L4.23 0L0 4.23L16.77 21L0 37.77L4.23 42L21 25.23L37.77 42L42 37.77L25.23 21L42 4.23Z"
 					fill="#901C1C" />
 			</svg> </button>
-	</ul>
+	</div>
 	<!-- Utils -->
-	<script src="/scripts/utils/utils_var.js"></script>
 	<script src="/scripts/utils/contactForm.js"></script>
 	<script src="/scripts/utils/lightbox.js"></script>
-	<script src="/scripts/utils/carousel_animation.js"></script>
+	<script src="/scripts/utils/carouselAnimation.js"></script>
 	<script src="/scripts/utils/sorting.js"></script>
 	<!-- Models-->
 	<script src="scripts/models/photographer.js"></script>
