Modifications après soutenance

--- a/photographer.html
+++ b/photographer.html
@@ -82,7 +82,7 @@
 				</label>
 				<label for="email" id="emailInput">Email
 					<input aria-labelledby="emailInput" type="email" class="text-input" name="email" id="email"
-						minlength='2' required="required" required pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+						minlength='2' required="required" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
 						aria-describedby="format-email" aria-invalid="false" />
 					<span id="format-email" class="hiddenInput">Votre email doit avoir un format d'email
 						valide</span>
@@ -115,11 +115,11 @@
 	<script src="/scripts/utils/carouselAnimation.js"></script>
 	<script src="/scripts/utils/sorting.js"></script>
 	<!-- Models-->
-	<script src="scripts/models/photographer.js"></script>
-	<script src="scripts/models/pictures.js"></script>
-	<script src="scripts/models/videos.js"></script>
-	<script src="scripts/models/carouselPicture.js"></script>
-	<script src="scripts/models/carouselVideo.js"></script>
+	<script src="scripts/models/Photographer.js"></script>
+	<script src="scripts/models/Picture.js"></script>
+	<script src="scripts/models/Video.js"></script>
+	<script src="scripts/models/CarouselPicture.js"></script>
+	<script src="scripts/models/CarouselVideo.js"></script>
 
 	<!-- Factories-->
 	<script src="scripts/factories/Photographer.js"></script>
