--- a/photographer.html
+++ b/photographer.html
@@ -55,7 +55,7 @@
 		<footer>
 			<div class="footer">
 				<div class="total-likes-content">
-					<div class='total-likes'> </div><span><i class="fa-solid fa-heart"></i></span>
+					<div class='total-likes'> </div><span><em class="fa-solid fa-heart"></em></span>
 				</div>
 			</div>
 		</footer>
